src/test/deca/test_compilateur/syntax/valid/created/method_call.deca
// Description :
//		un main vide
//
// Resultats :
//		Ok


{
a a = a;
a = a;
a.meth;
a.met();
}