src/test/deca/test_compilateur/syntax/invalid/created/miscellaneous/infinite_float.deca
// Description :
//    test d'un float infinite
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 9:  float trop grand

{
float a = -1.0e99;
}